fixed gradient  with workaround https://stackoverflow.com/questions/15597167/css3-opacity-gradient

--- a/src/components/other/SectionScroller/styles.module.css
+++ b/src/components/other/SectionScroller/styles.module.css
@@ -28,6 +28,7 @@
   position: relative;
   overflow: hidden;
   max-height: 400px;
+  padding: 5px;
 }
 
 .SectionLeftContainer::before {
@@ -38,7 +39,11 @@
   left: 0;
   height: 108px;
   width: 100%;
-  background: linear-gradient(var(--ifm-color-surface), transparent);
+  background: linear-gradient(
+    to bottom,
+    var(--ifm-color-surface),
+    var(--ifm-color-surface-transparent)
+  );
   z-index: 1;
 }
 
@@ -50,7 +55,11 @@
   left: 0;
   height: 108px;
   width: 100%;
-  background: linear-gradient(transparent, var(--ifm-color-surface));
+  background: linear-gradient(
+    to top,
+    var(--ifm-color-surface),
+    var(--ifm-color-surface-transparent)
+  );
   z-index: 1;
 }
 
